--- a/Notes/8 进程间通信—信号量.md
+++ b/Notes/8 进程间通信—信号量.md
@@ -1,2 +1,150 @@
 
 
+
+
+### 信号量的使用步骤
+
+1. 信号量调用semget 函数创建新的信号量集合，或者获取已有的信号量集合。
+2. 调用semctl函数给集合中的每一个信号量设置初始值(一个进程进行就行了)
+3. 调用semop函数，以及集合中的信号量进行pv操作
+   + PV操作：
+     + P操作：加锁，对信号量进行-1，如果信号量的值等于0，p操作就会阻塞
+     + V操作：解锁，对信号量进行+1，V操作不存在阻塞问题
+   + 通过使用PV操作，就能实现互斥，以防止出现干扰。
+4. 调用semctl删除信号量集合
+
+
+
+### semget 函数
+
+> Semget 是semaphore的缩写
+
+```c
+ #include <sys/types.h>
+ #include <sys/ipc.h>
+ #include <sys/sem.h>
+
+int semget(key_t key, int nsems, int semflg);
+```
+
++ 功能： 根据key值创建新的或者获取已有的信号量集合，并返回其标识符
+
+  + 实现互斥时：集合中只需要一个信号量
+  + 实现同步时：集合中需要多个信号量
+
++ 返回值： 调用成功则返回信号量集合的标识符，失败则返回-1，并且errno被设置。
+
++ 参数：
+
+  + key ：设置同消息队列和共享内存。
+
+    > 一般使用ftok获取key值
+
+  + nsems ：指定集合中信号量的个数
+
+    > 互斥是指定为1； 同步时大于1
+
+  + semflg ：设置同消息队列和共享内存
+
+    > 一般都设置为 0664|IPC_CREAT
+
+### semctl函数
+
+```c
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/sem.h>
+
+int semctl(int semid, int semnum, int cmd, ...);
+```
+
++ 功能：根据cmd的要求对集合中的各个信号量进行控制，...表示它是一个可变参数，用不到时可以不写。
+
++ 返回值：调用成功返回非-1值，失败返回-1并设置errno。
+
++ 参数：
+
+  + semid ： 信号量标识符。通过信号量标识符可以找到信号量的集合
+  + semnum ：集合中某个信号量的编号。
+    + 信号量的编号为非负整数，并且自动从0开始编号的。
+    + 通过信号量编号就能找到集合中对应信号量，然后对这个具体的信号量进行控制操作。
+  + cmd ： 控制选项
+    + IPC_STAT： 将信号量的属性信息从内核读到第四个参数所指定的 struct semid_ds 缓存中。
+    + IPC_SET ： 修改属性信息，此时也会用到 struct semid_ds 结构体变量。修改方法和消息队列中一样。
+    + IPC_RMID ： 删除信号量，当集合中所有的信号量被删除后，信号量集合也就被删除了。删除操作时不需要第四个参数。
+    + SETVAL ： 通过第四个参数给集合中semnu编号的信号量设置一个int初始值。 
+
+  > 以上可以看出第四个参数是变化着的，为了应对这种变化可以设置一个联合体。
+  >
+  > ```c
+  > union semun {
+  >   int val;
+  >   struct semid_ds *buf;
+  >   unsigned short *array;//不做要求
+  >   struct seminfo *__buf;//不做要求
+  > }
+  > ```
+  >
+  > 这个联合体并没有定义在信号量相关的系统文件中，使用这个联合体时，自己需要定义这个类型，类型名可以自己定义。
+  >
+  > 成员：
+  >
+  > + val：存放用于初始化信号量的值
+  > + buf： 存放struct semid_ds结构体变量的地址
+  >
+  > ```c
+  > //当需要指定struct semid_ds缓存时
+  > union semun sem_un; //定义一个联合体变量
+  > struct semid_ds buf;//定义一个struct semid_ds缓存
+  > sem_un.buf = &buf;//现在整个联合体的值就是buf的地址
+  > semctl(semid, 0, IPC_STAT, sem_un); //这里将联合体传递给semctl函数，其实就是将buf的地址传递给了semctl。
+  > ```
+
+
+
+### semop 函数
+
+```c
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/sem.h>
+
+int semop(int semid, struct sembuf *sops, size_t nsops);
+```
+
++ 功能： 对指定的信号量进行p操作或者v操作。
+
++ 返回值：调用成功返回0，失败返回-1，errno被设置。
+
++ 参数：
+
+  + semid ： 信号量集合的标识符
+  + sops ： 更好的写法是`struct sembuf sops[]`
+  + nsops ： 指定第二个数组参数中数组元素的个数。
+
+  > 每一个数组成员对应一个信号量，每一个元素都是一个struct sembuf结构体变量，内部成员决定着：
+  >
+  > + 对集合中哪一个信号量进行操作
+  > + 进行P操作还是V操作
+  >
+  > 结构体成员：
+  >
+  > ```c++
+  > struct sembuf 
+  > {
+  > 		unsigned short sem_num;
+  >   	short sem_op;
+  >   	short sem_flg;
+  > }
+  > ```
+  >
+  > 此结构体在semop头文件中已经定义了。
+  >
+  > 参数：
+  >
+  > + sem_num ： 信号量编号，决定对集合中哪一个信号量进行pv操作
+  > + sem_op ： 设置为-1，表示进行P操作，设置为1表示V操作
+  > + sem_flg ： 
+  >   + IPC_NOWAIT： 设置为非阻塞
+  >   + IPC_UNDO ：防止死锁
+
